# kbgen

./: Cargo.toml  README.md  out.md
.github/workflows/: test-n-release.yml  testing.yml
src/: article.rs  error.rs  lib.rs  note.rs
src/templates/: article.hbs  note.hbs
