[package]
name = "kbgen"
version = "0.1.1"
authors = ["José Duarte <jmg.duarte@campus.fct.unl.pt>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/jmg-duarte/kbgen"
repository = "https://github.com/jmg-duarte/kbgen"
license = "MIT"
keywords = ["cli", "generator", "foam", "knowledge-base"]
categories = ["command-line-utilities"]

[dependencies]
clap = "3.0.0-beta.2"
handlebars = "3.5.0"
serde = { version = "1.0.117", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"